src/test/ui/resolve/resolve-self-in-impl.stderr
error: `Self` is only available in impls, traits, and type definitions
  --> $DIR/resolve-self-in-impl.rs:14:13
   |
LL | impl Tr for Self {}
   |             ^^^^

error: `Self` is only available in impls, traits, and type definitions
  --> $DIR/resolve-self-in-impl.rs:16:15
   |
LL | impl Tr for S<Self> {}
   |               ^^^^

error: `Self` is only available in impls, traits, and type definitions
  --> $DIR/resolve-self-in-impl.rs:18:6
   |
LL | impl Self {}
   |      ^^^^

error: `Self` is only available in impls, traits, and type definitions
  --> $DIR/resolve-self-in-impl.rs:20:8
   |
LL | impl S<Self> {}
   |        ^^^^

error[E0391]: cycle detected when computing type of `<impl at $DIR/resolve-self-in-impl.rs:14:1: 14:20>`
  --> $DIR/resolve-self-in-impl.rs:14:13
   |
LL | impl Tr for Self {}
   |             ^^^^
   |
   = note: ...which immediately requires computing type of `<impl at $DIR/resolve-self-in-impl.rs:14:1: 14:20>` again
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error[E0391]: cycle detected when computing type of `<impl at $DIR/resolve-self-in-impl.rs:16:1: 16:23>`
  --> $DIR/resolve-self-in-impl.rs:16:15
   |
LL | impl Tr for S<Self> {}
   |               ^^^^
   |
   = note: ...which immediately requires computing type of `<impl at $DIR/resolve-self-in-impl.rs:16:1: 16:23>` again
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error[E0391]: cycle detected when computing type of `<impl at $DIR/resolve-self-in-impl.rs:18:1: 18:13>`
  --> $DIR/resolve-self-in-impl.rs:18:6
   |
LL | impl Self {}
   |      ^^^^
   |
   = note: ...which immediately requires computing type of `<impl at $DIR/resolve-self-in-impl.rs:18:1: 18:13>` again
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error[E0391]: cycle detected when computing type of `<impl at $DIR/resolve-self-in-impl.rs:20:1: 20:16>`
  --> $DIR/resolve-self-in-impl.rs:20:8
   |
LL | impl S<Self> {}
   |        ^^^^
   |
   = note: ...which immediately requires computing type of `<impl at $DIR/resolve-self-in-impl.rs:20:1: 20:16>` again
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error[E0391]: cycle detected when computing trait implemented by `<impl at $DIR/resolve-self-in-impl.rs:22:1: 22:26>`
  --> $DIR/resolve-self-in-impl.rs:22:1
   |
LL | impl Tr<Self::A> for S {}
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires computing trait implemented by `<impl at $DIR/resolve-self-in-impl.rs:22:1: 22:26>` again
note: cycle used when collecting item types in top-level module
  --> $DIR/resolve-self-in-impl.rs:1:1
   |
LL | / #![feature(associated_type_defaults)]
LL | |
LL | | struct S<T = u8>(T);
LL | | trait Tr<T = u8> {
...  |
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0391`.
